feat: add teams and games model and controller
