# app/Http/Schemas/PaginatedCollections/TeamPaginatedCollection.php
@@ -1,0 +1,14 @@
+<?php
+
+namespace App\Http\Schemas\PaginatedCollections;
+
+use OpenApi\Attributes as OA;
+
+#[OA\Schema(
+    schema: 'TeamPaginatedCollection',
+    properties: [
+        new OA\Property(property: 'data', type: 'array', items: new OA\Items(ref: '#/components/schemas/Team')),
+    ],
+    allOf: [new OA\Schema(ref: '#/components/schemas/PaginatedCollection')]
+)]
+abstract readonly class TeamPaginatedCollection {}
